[workspace]
resolver = "2"
members = [
    "policy-hub-api",
    "policy-hub-core",
    "policy-hub-storage",
    "policy-hub-executor",
    "policy-hub-compiler",
    "policy-hub-bundler",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Policy Hub Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# Web framework
axum = "0.7"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "compression-full", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
couchbase = "1.0.0-alpha.5"

# WASM runtime
wasmtime = "16.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Development
async-trait = "0.1"
