[package]
name = "policy-hub-bundler"
version.workspace = true
edition.workspace = true

[dependencies]
policy-hub-core = { path = "../policy-hub-core" }
policy-hub-compiler = { path = "../policy-hub-compiler" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
