[package]
name = "policy-hub-executor"
version.workspace = true
edition.workspace = true

[dependencies]
policy-hub-core = { path = "../policy-hub-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# WASM runtime for sandboxed execution
wasmtime = { workspace = true }

# QuickJS runtime for JavaScript execution (fallback)
rquickjs = { version = "0.4", features = ["bindgen", "loader", "classes"] }

# LRU cache for compiled modules
lru = "0.12"
parking_lot = "0.12"

[dev-dependencies]
policy-hub-compiler = { path = "../policy-hub-compiler" }
