[project]
name = "policy-hub-bdd"
version = "0.1.0"
description = "BDD tests for Policy Hub API"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0",
    "pytest-bdd>=7.0",
    "requests>=2.31",
]

[tool.pytest.ini_options]
testpaths = ["tests/bdd"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
